grid alignment fixes

--- a/assets/css/_authors.styl
+++ b/assets/css/_authors.styl
@@ -1,2 +1,6 @@
 .authors-horizontal-list
   margin:4rem 0
+  
+.author
+  small
+    margin-top:0.25rem
