--- a/assets/css/_scaffolding.styl
+++ b/assets/css/_scaffolding.styl
@@ -5,8 +5,9 @@ nav
   nav(1, #fff, #444)
   a
     text-decoration:none
-  & > h1
+  h1
     margin:0
+    padding-left:0
     & > a
       color:#444
       text-decoration:none
@@ -16,6 +17,12 @@ nav
 //   text-align:center
 //   & > a
 //     flex:1
+
+.reflex-container.reverse-margin-sm
+  margin:0 -5px
+  
+.reflex-container.reverse-margin-md
+  margin:0 -10px
 
 section
   margin:0 auto
